--- a/pom.xml
+++ b/pom.xml
@@ -217,5 +217,7 @@
     <url>http://github.com/jleetutorial/maven-project</url>
   </scm>
 
-
+  <prerequisites>
+    <maven>3.0.3</maven>
+  </prerequisites>
 </project>
